Changes to be committed: 	modified:   rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml 	modified:   rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/validators.tr.yml

--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml
@@ -16,55 +16,55 @@
 'Traditional Chinese': '繁體中文'
 # End of language selections
 
-'Welcome to': 'Hoşgeldiniz'
+'Welcome to': 'Hoş geldiniz'
 Language: Dil
 Next: Sonraki
-Hostname: Sistem Adı
+Hostname: Sunucu Adı
 'Please enter a hostname': 'Lütfen bir sunucu adı giriniz'
 Back: Geri
 'Domain Name': 'Alan Adı'
 'Please enter a domain name': 'Lütfen bir alan adı giriniz'
-Email: Eposta
-'Please enter an email address for important notifications': 'Lütfen önemli bildirimlerin gönderileceği bir eposta adresi giriniz'
+Email: E-posta
+'Please enter an email address for important notifications': 'Lütfen önemli bildirimlerin gönderileceği bir e-posta adresi giriniz'
 'IPv4 Address': 'IPv4 Adresi'
 'Please enter a valid IPv4 address': 'Lütfen geçerli bir IPv4 adresi giriniz'
-'IPv4 Netmask': '__IPv4 Alt Ağ Maskesi'
-'Please enter a valid IPv4 netmask': '__Please enter a valid IPv4 netmask'
-'Please enter a valid IPv4 gateway': '__Please enter a valid IPv4 gateway'
-'IPv4 Gateway': '__IPv4 Ağ Geçidi'
-'Do you want to set a static IPv4 address?': '__Do you want to set a static IPv4 address?'
+'IPv4 Netmask': 'IPv4 Alt Ağ Maskesi'
+'Please enter a valid IPv4 netmask': 'Lütfen geçerli bir IPv4 alt ağ maskesi giriniz'
+'Please enter a valid IPv4 gateway': 'lütfen geçerli bir IPv4 varsayılan ağ geçidi giriniz'
+'IPv4 Gateway': 'IPv4 Varsayılan Ağ Geçidi'
+'Do you want to set a static IPv4 address?': 'Statik bir IPv4 adresi ayarlamak ister misiniz?'
 'Yes': 'Evet'
 'No': 'Hayır'
-'Do you want to set a static IPv6 address?': '__Do you want to set a static IPv6 address?'
-'Configure IPv6': '__Configure IPv6'
-'Please enter a valid IPv6 address': '__Please enter a valid IPv6 address'
-'IPv6 Address': '__IPv6 Address'
-'Please enter a valid IPv6 prefix': '__Please enter a valid IPv6 prefix'
+'Do you want to set a static IPv6 address?': 'Statik bir IPv6 adresi ayarlamak ister misiniz?'
+'Configure IPv6': 'IPv6'yı yapılandır'
+'Please enter a valid IPv6 address': 'Lütfen geçerli bir IPv6 adresi giriniz'
+'IPv6 Address': 'IPv6 Adresi'
+'Please enter a valid IPv6 prefix': 'Lütfen geçerli bir IPv6 ön eki giriniz'
 'IPv6 Prefix': 'IPv6 Ön Eki'
-'Please enter a valid IPv6 gateway': '__Please enter a valid IPv6 gateway'
-'IPv6 Gateway': '__IPv6 Gateway'
-'Do you want to enable full DNS Recursion?': '__Do you want to enable full DNS Recursion?'
-'Configure DNS Recursion': '__Configure DNS Recursion'
-'Please enter the primary DNS address': '__Please enter the primary DNS address'
-'Primary DNS': '__Primary DNS'
-'Please enter the secondary DNS address': '__Please enter the secondary DNS address'
-'Secondary DNS': '__Secondary DNS'
-'Please enter the username for the admin web interface': '__Please enter the username for the admin web interface'
-'Web Admin Username': '__Web Admin Username'
-'Please enter the web admin password': '__Please enter the web admin password'
-'Please re-enter the web admin password': '__Please re-enter the web admin password'
-'Web Admin Password': '__Web Admin Password'
-'Please enter the username for the admin console interface': '__Please enter the username for the admin console interface'
-'Console Admin Username': '__Console Admin Username'
-'Please enter the console admin password': '__Please enter the console admin password'
-'Please re-enter the console admin password': '__Please re-enter the console admin password'
-'Console Admin Password': '__Console Admin Password'
-'Do you want to install hypervisor tools for your hypervisor?': '__Do you want to install hypervisor tools for your hypervisor?'
-'Configure Hypervisor Tools': '__Configure Hypervisor Tools'
-'Is the host set to UTC time?': '__Is the host set to UTC time?'
-'Configure UTC Time': '__Configure UTC Time'
-Timezone: __Timezone
-'Timezone Selection': '__Timezone Selection'
+'Please enter a valid IPv6 gateway': 'lütfen geçerli bir IPv6 varsayılan ağ geçidi giriniz'
+'IPv6 Gateway': 'IPv6 Varsayılan Ağ Geçidi'
+'Do you want to enable full DNS Recursion?': 'Tam DNS çözümlemesini etkinleştirmek istermisiniz?'
+'Configure DNS Recursion': 'DNS Çözümlemesini Yapılandır'
+'Please enter the primary DNS address': 'Lütfen tercih edilen DNS adresini giriniz'
+'Primary DNS': 'Tercih Edilen DNS'
+'Please enter the secondary DNS address': 'Lütfen diğer DNS adresini giriniz'
+'Secondary DNS': 'Diğer DNS'
+'Please enter the username for the admin web interface': 'Lütfen yönetici web arayüzü için kullanıcı adı giriniz'
+'Web Admin Username': 'Web Yönetici Kullanıcı Adı'
+'Please enter the web admin password': 'Lütfen yönetici web arayüzü için parola adı giriniz'
+'Please re-enter the web admin password': 'Lütfen yönetici web arayüzü için parolayı tekrar adı giriniz'
+'Web Admin Password': 'Web Yönetici Parola'
+'Please enter the username for the admin console interface': 'Lütfen yönetici konsolu arayüzü için kullanıcı adı giriniz'
+'Console Admin Username': 'Konsol Yönetici Kullanıcı Adı'
+'Please enter the console admin password': 'Lütfen yönetici konsolu arayüzü için parola adı giriniz'
+'Please re-enter the console admin password': 'Lütfen yönetici konsolu arayüzü için parolayı tekrar adı giriniz'
+'Console Admin Password': 'Konsol Yönetici Parola'
+'Do you want to install hypervisor tools for your hypervisor?': 'Sanallaştırma ortamınız için gerekli araçların kurulmasını ister misiniz?'
+'Configure Hypervisor Tools': 'Sanallaştırma Araçlarını Yapılandır'
+'Is the host set to UTC time?': 'Sunucu UTC saat dilimine mi ayarlı?'
+'Configure UTC Time': 'UTC Saat Dilimi Yapılandır '
+Timezone: Saat Dilimi
+'Timezone Selection': 'Saat Dilimi Seçimi'
 'Please enter the IP or hostname of the local mail server': '__Please enter the IP or hostname of the local mail server'
 'Local Mail Server': '__Local Mail Server'
 'Please enter your IANA country code': '__Please enter your IANA country code'
