modified:   rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml

--- a/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml
+++ b/rpmbuild/SOURCES/eFa-base-4.0.0/eFaInit/app/Resources/translations/messages.tr.yml
@@ -5,7 +5,7 @@
 'French': 'Français'
 'Portuguese': 'Portugues'
 'German': 'Deutsche'
-'Turkish': 'Türk'
+'Turkish': 'Türkçe'
 'Italian': 'Italiano'
 'Greek': 'Ελληνικά'
 'Russian': 'Pусский'
@@ -41,46 +41,46 @@ Email: E-posta
 'IPv6 Address': 'IPv6 Adresi'
 'Please enter a valid IPv6 prefix': 'Lütfen geçerli bir IPv6 ön eki giriniz'
 'IPv6 Prefix': 'IPv6 Ön Eki'
-'Please enter a valid IPv6 gateway': 'lütfen geçerli bir IPv6 varsayılan ağ geçidi giriniz'
+'Please enter a valid IPv6 gateway': 'Lütfen geçerli bir IPv6 varsayılan ağ geçidi giriniz'
 'IPv6 Gateway': 'IPv6 Varsayılan Ağ Geçidi'
-'Do you want to enable full DNS Recursion?': 'Tam DNS çözümlemesini etkinleştirmek istermisiniz?'
+'Do you want to enable full DNS Recursion?': 'Tam DNS çözümlemesini etkinleştirmek ister misiniz?'
 'Configure DNS Recursion': 'DNS Çözümlemesini Yapılandır'
 'Please enter the primary DNS address': 'Lütfen tercih edilen DNS adresini giriniz'
 'Primary DNS': 'Tercih Edilen DNS'
 'Please enter the secondary DNS address': 'Lütfen diğer DNS adresini giriniz'
 'Secondary DNS': 'Diğer DNS'
 'Please enter the username for the admin web interface': 'Lütfen yönetici web arayüzü için kullanıcı adı giriniz'
-'Web Admin Username': 'Web Yönetici Kullanıcı Adı'
-'Please enter the web admin password': 'Lütfen yönetici web arayüzü için parola adı giriniz'
-'Please re-enter the web admin password': 'Lütfen yönetici web arayüzü için parolayı tekrar adı giriniz'
-'Web Admin Password': 'Web Yönetici Parola'
-'Please enter the username for the admin console interface': 'Lütfen yönetici konsolu arayüzü için kullanıcı adı giriniz'
-'Console Admin Username': 'Konsol Yönetici Kullanıcı Adı'
-'Please enter the console admin password': 'Lütfen yönetici konsolu arayüzü için parola adı giriniz'
-'Please re-enter the console admin password': 'Lütfen yönetici konsolu arayüzü için parolayı tekrar adı giriniz'
-'Console Admin Password': 'Konsol Yönetici Parola'
+'Web Admin Username': 'Yönetici Web Arayüzü Kullanıcı Adı'
+'Please enter the web admin password': 'Lütfen yönetici web arayüzü için parola giriniz'
+'Please re-enter the web admin password': 'Lütfen yönetici web arayüzü için parolayı tekrar giriniz'
+'Web Admin Password': 'Yönetici Web Arayüzü Parola'
+'Please enter the username for the admin console interface': 'Lütfen yönetici konsolu için kullanıcı adı giriniz'
+'Console Admin Username': 'Yönetici Konsolu Kullanıcı Adı'
+'Please enter the console admin password': 'Lütfen yönetici konsolu için parola giriniz'
+'Please re-enter the console admin password': 'Lütfen yönetici konsolu için parolayı tekrar giriniz'
+'Console Admin Password': 'Yönetici Konsolu Parola'
 'Do you want to install hypervisor tools for your hypervisor?': 'Sanallaştırma ortamınız için gerekli araçların kurulmasını ister misiniz?'
 'Configure Hypervisor Tools': 'Sanallaştırma Araçlarını Yapılandır'
 'Is the host set to UTC time?': 'Sunucu UTC saat dilimine mi ayarlı?'
 'Configure UTC Time': 'UTC Saat Dilimi Yapılandır '
 Timezone: Saat Dilimi
 'Timezone Selection': 'Saat Dilimi Seçimi'
-'Please enter the IP or hostname of the local mail server': '__Please enter the IP or hostname of the local mail server'
-'Local Mail Server': '__Local Mail Server'
-'Please enter your IANA country code': '__Please enter your IANA country code'
-'Please enter your organization name (No spaces, dots, or underscores)': '__Please enter your organization name (No spaces, dots, or underscores)'
-'Organization Name': '__Organization Name'
-'Enable Recursion': '__Enable Recursion'
-'DNS Primary Address': '__DNS Primary Address'
-'Set DNS': '__Set DNS'
-'DNS Secondary Address': '__DNS Secondary Address'
-'Configure IPv4': '__Configure IPv4'
-'Set IP Address': '__Set IP Address'
-'Set IP Netmask': '__Set IP Netmask'
-'Set IP Gateway': '__Set IP Gateway'
-'Host is UTC': '__Host is UTC'
-'Set IP Mask': '__Set IP Mask'
-'IANA Country Code': '__IANA Country Code'
-'Verify Settings': '__Verify Settings'
-'Enable IPv6 DNS': '__Enable IPv6 DNS'
-'Do you want to Enable IPv6 DNS?': '__Do you want to Enable IPv6 DNS?'
+'Please enter the IP or hostname of the local mail server': 'Lütfen yerel e-posta sunucusun adını yada IP adresini giriniz'
+'Local Mail Server': 'Yerel E-posta Sunucusu'
+'Please enter your IANA country code': 'Lütfen IANA ülke kodunu giriniz.'
+'Please enter your organization name (No spaces, dots, or underscores)': 'Lütfen şirket adı giriniz(Boşluk, nokta, yada altçizgi olmadan)'
+'Organization Name': 'Şirket Adı'
+'Enable Recursion': 'Çözümlemeyi Aç'
+'DNS Primary Address': 'Varsayılan DNS Adresi'
+'Set DNS': 'DNS Ayarla'
+'DNS Secondary Address': 'Diğer DNS Adresi'
+'Configure IPv4': 'IPv4 Yapılandır'
+'Set IP Address': 'IP Adresi Ayarla'
+'Set IP Netmask': 'IP Alt Ağ Maskesi Ayarla'
+'Set IP Gateway': 'IP Varsayılan Ağ Geçidi Ayarla'
+'Host is UTC': 'Sunucu UTC saat dilimine ayarlıdır'
+'Set IP Mask': 'IP Maskesi Ayarla'
+'IANA Country Code': 'IANA Ülke Kodu'
+'Verify Settings': 'Ayarları Doğrula'
+'Enable IPv6 DNS': 'IPv6 DNS'i Aç'
+'Do you want to Enable IPv6 DNS?': 'IPv6 DNS'i açmak istiyor musunuz?'
